test/e2e/fail/012-non-exhaustive-match/input.tjs
enum Color {
    Red,
    Green,
    Blue,
}

let c = Color::Red;

let name = match (c) {
    Color::Red => "red",
    Color::Green => "green",
};
